Update Tumor-Cut on contrast enhanced MR images_github.ipynb

--- a/Tumor-Cut on contrast enhanced MR images_github.ipynb
+++ b/Tumor-Cut on contrast enhanced MR images_github.ipynb
@@ -65,7 +65,7 @@
     }
    ],
    "source": [
-    "img = cv2.imread('D://Users/plin/Documents/Stanford CS231n/2017/assignment2/kitten.jpg', 1)\n",
+    "img = cv2.imread('\kitten.jpg', 1)\n",
     "RGB_img = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)\n",
     "plt.imshow(RGB_img)\n",
     "RGB_img.shape\n",
